--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=room_relish_api
+
+server.port=8081
+
+spring.data.mongodb.uri=mongodb+srv://gceInterns:IcanioGCE@gcecluster1.hfhvmqk.mongodb.net/golobe_db
+
+spring.graphql.graphiql.enabled=true
